--- a/app/src/main/res/layout/fragment_credentials.xml
+++ b/app/src/main/res/layout/fragment_credentials.xml
@@ -1,82 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <!--<TextView-->
-        <!--android:id="@+id/textView2"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginStart="16dp"-->
-        <!--android:layout_marginBottom="24dp"-->
-        <!--android:text="Credentials"-->
-        <!--android:textAppearance="@android:style/TextAppearance.Material.Large"-->
-        <!--android:textSize="30sp"-->
-        <!--android:textStyle="bold"-->
-        <!--android:visibility="invisible"-->
-        <!--app:layout_constraintBottom_toTopOf="@+id/cardView2"-->
-        <!--app:layout_constraintStart_toStartOf="@+id/cardView2" />-->
+    <!--android:id="@+id/textView2"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_marginStart="16dp"-->
+    <!--android:layout_marginBottom="24dp"-->
+    <!--android:text="Credentials"-->
+    <!--android:textAppearance="@android:style/TextAppearance.Material.Large"-->
+    <!--android:textSize="30sp"-->
+    <!--android:textStyle="bold"-->
+    <!--android:visibility="invisible"-->
+    <!--app:layout_constraintBottom_toTopOf="@+id/cardView2"-->
+    <!--app:layout_constraintStart_toStartOf="@+id/cardView2" />-->
 
     <!--<androidx.cardview.widget.CardView-->
-        <!--android:id="@+id/cardView2"-->
-        <!--android:layout_width="0dp"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginStart="24dp"-->
-        <!--android:layout_marginTop="8dp"-->
-        <!--android:layout_marginEnd="24dp"-->
-        <!--android:layout_marginBottom="8dp"-->
-        <!--android:visibility="invisible"-->
-        <!--app:cardCornerRadius="20dp"-->
-        <!--app:cardElevation="5dp"-->
-        <!--app:contentPadding="16dp"-->
-        <!--app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--app:layout_constraintEnd_toEndOf="parent"-->
-        <!--app:layout_constraintStart_toStartOf="parent"-->
-        <!--app:layout_constraintTop_toTopOf="parent">-->
+    <!--android:id="@+id/cardView2"-->
+    <!--android:layout_width="0dp"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_marginStart="24dp"-->
+    <!--android:layout_marginTop="8dp"-->
+    <!--android:layout_marginEnd="24dp"-->
+    <!--android:layout_marginBottom="8dp"-->
+    <!--android:visibility="invisible"-->
+    <!--app:cardCornerRadius="20dp"-->
+    <!--app:cardElevation="5dp"-->
+    <!--app:contentPadding="16dp"-->
+    <!--app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--app:layout_constraintEnd_toEndOf="parent"-->
+    <!--app:layout_constraintStart_toStartOf="parent"-->
+    <!--app:layout_constraintTop_toTopOf="parent">-->
 
-        <!--<LinearLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:orientation="vertical">-->
+    <!--<LinearLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:orientation="vertical">-->
 
-            <!--<EditText-->
-                <!--android:id="@+id/text_creds_displayname"-->
-                <!--style="@style/OneclickInputStyle"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:ems="10"-->
-                <!--android:hint="Display name"-->
-                <!--android:inputType="textPersonName" />-->
+    <!--<EditText-->
+    <!--android:id="@+id/text_creds_displayname"-->
+    <!--style="@style/OneclickInputStyle"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:ems="10"-->
+    <!--android:hint="Display name"-->
+    <!--android:inputType="textPersonName" />-->
 
-            <!--<EditText-->
-                <!--android:id="@+id/text_creds_username"-->
-                <!--style="@style/OneclickInputStyle"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:ems="10"-->
-                <!--android:hint="Username"-->
-                <!--android:inputType="textPersonName" />-->
+    <!--<EditText-->
+    <!--android:id="@+id/text_creds_username"-->
+    <!--style="@style/OneclickInputStyle"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:ems="10"-->
+    <!--android:hint="Username"-->
+    <!--android:inputType="textPersonName" />-->
 
-            <!--<EditText-->
-                <!--android:id="@+id/text_creds_password"-->
-                <!--style="@style/OneclickInputStyle"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:ems="10"-->
-                <!--android:hint="Password"-->
-                <!--android:inputType="textPassword" />-->
+    <!--<EditText-->
+    <!--android:id="@+id/text_creds_password"-->
+    <!--style="@style/OneclickInputStyle"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:ems="10"-->
+    <!--android:hint="Password"-->
+    <!--android:inputType="textPassword" />-->
 
-            <!--<TextView-->
-                <!--android:id="@+id/textView"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_margin="8dp"-->
-                <!--android:text="Please enter the Username and Password of your prontonetworks account" />-->
-        <!--</LinearLayout>-->
+    <!--<TextView-->
+    <!--android:id="@+id/textView"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_margin="8dp"-->
+    <!--android:text="Please enter the Username and Password of your prontonetworks account" />-->
+    <!--</LinearLayout>-->
     <!--</androidx.cardview.widget.CardView>-->
+
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewpager_onboarding"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/indicator_onboarding"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/indicator_onboarding"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/input_creds_display_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/viewpager_onboarding"
+        app:tabBackground="@drawable/indicator_selector"
+        app:tabGravity="center"
+        app:tabIndicatorHeight="0dp" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/input_creds_display_name"
@@ -85,7 +109,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         android:hint="Display Name"
         app:errorEnabled="true"
         app:layout_constraintBottom_toTopOf="@+id/input_creds_username"
@@ -105,7 +129,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         android:hint="Pronto Username"
         app:errorEnabled="true"
         app:layout_constraintBottom_toTopOf="@+id/input_creds_password"
@@ -125,7 +149,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="16dp"
         android:hint="Pronto Password"
         app:errorEnabled="true"
         app:layout_constraintBottom_toTopOf="@+id/button_cred_next"
