--- a/app/src/main/res/layout/fragment_bottom_sheet_input.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet_input.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -19,6 +20,7 @@
             android:id="@+id/text_input_sheet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:gravity="center"
             android:padding="8dp"
             android:text="New account"
@@ -30,7 +32,6 @@
             style="@style/OneclickInputStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
             android:hint="Username"
             android:inputType="textPersonName" />
 
@@ -39,7 +40,6 @@
             style="@style/OneclickInputStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
             android:hint="Password"
             android:inputType="textPersonName|textPassword" />
 
@@ -49,22 +49,20 @@
             android:layout_margin="8dp"
             android:orientation="horizontal">
 
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fab_newuser_cancel"
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/button_newuser_cancel"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginBottom="10dp"
-                android:clickable="true"
-                app:backgroundTint="@color/colorActionRed"
-                app:fabSize="mini"
+                android:layout_marginBottom="8dp"
+                style="@style/ButtonSecondary"
+                android:text="@android:string/cancel"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_close_black_24dp" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline"
@@ -73,22 +71,20 @@
                 android:orientation="vertical"
                 app:layout_constraintGuide_percent="0.5041322" />
 
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fab_newuser_done"
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/button_newuser_done"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginBottom="10dp"
-                android:clickable="true"
-                app:backgroundTint="@color/colorThemeBlue"
-                app:fabSize="mini"
+                android:layout_marginBottom="8dp"
+                style="@style/ButtonPrimary"
+                android:text="Done"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/guideline"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_chevron_right_white_24dp" />
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
