--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,10 +20,40 @@
         <item name="android:paddingTop">12dp</item>
         <item name="android:paddingBottom">12dp</item>
 
-        <item name="android:layout_margin">16dp</item>
+        <item name="android:layout_marginStart">16dp</item>
+        <item name="android:layout_marginEnd">16dp</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:layout_marginBottom">8dp</item>
 
         <item name="android:background">@drawable/shape_round_box</item>
         <item name="android:backgroundTint">@color/colorThemeInputGrey</item>
+    </style>
+
+    <style name="ButtonAction">
+        <item name="android:gravity">center</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Medium</item>
+        <item name="android:foreground">@drawable/bg_ripple</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+    </style>
+
+    <style name="ButtonPrimary" parent="ButtonAction">
+        <item name="android:background">@drawable/bg_button_primary</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <style name="ButtonSecondary" parent="ButtonAction">
+        <item name="android:background">@drawable/bg_button_secondary</item>
+        <!--<item name="android:textColor">@android:color/white</item>-->
+    </style>
+
+    <style name="FabAction" parent="Widget.MaterialComponents.FloatingActionButton">
+        <item name="backgroundTint">@color/colorBlueMuted</item>
+        <item name="android:tint">@color/colorPrimary</item>
+    </style>
+
+    <style name="FabActionSmall" parent="FabAction">
+        <item name="fabSize">mini</item>
     </style>
 
     <style name="BottomSheet" parent="@style/Widget.Design.BottomSheet.Modal">
